# datadog-utility

./: .editorconfig  .env.example  .gitignore  .readthedocs.yaml  LICENSE  README.md  RELEASE.md  pyproject.toml
.github/workflows/: README.md  publish-test.yml  publish.yml  test-build.yml
docs/: commands.rst  conf.py  configuration.rst  examples.rst  installation.rst  quickstart.rst  requirements.txt  troubleshooting.rst
docs/_build/html/: .buildinfo  .buildinfo.bak  commands.html  configuration.html  examples.html  genindex.html  index.html  installation.html  objects.inv  quickstart.html  search.html  searchindex.js  troubleshooting.html
docs/_build/html/.doctrees/: commands.doctree  configuration.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  quickstart.doctree  troubleshooting.doctree
docs/_build/html/_sources/: commands.rst.txt  examples.rst.txt  index.rst.txt  troubleshooting.rst.txt
licenses/: datadog-api-client-python-notice
src/ddutil/: __init__.py  _version.py  cli.py
src/ddutil/common/: logs.py  utils.py
src/ddutil/common/aws/: auth.py  iam.py
src/ddutil/common/datadog/: aws.py
tests/: test_status_inline_policy_drift.py
